@@ -1,6 +1,8 @@
 Version 5.1.0   unreleased
 
     * Bump up to GWT 2.7.0, AppEngine v1.9.17a, and CedarBuild v0.8.12.
+    * Deprecate the GaeUserService and GaeUserRpc methods that handle federated login.
+    * Implement new GaeUserService and GaeUserRpc methods to support Google Accounts logins.
 
 Version 5.0.2   11 Nov 2014
 
